--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+:root {
+  --deliveroo-blue: #5dccbf;
+  /* var(--deliveroo-blue); */
+}
+
 a {
   text-decoration: none;
 }
@@ -40,6 +45,10 @@ h2 {
   justify-content: space-between;
 }
 
+.space-around {
+  justify-content: space-around;
+}
+
 .flex1 {
   flex: 1;
 }
@@ -51,31 +60,11 @@ h2 {
 .position-relative {
   position: relative;
 }
-/* .App {
-  text-align: center;
+
+.text-blue {
+  color: var(--deliveroo-blue);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.bold {
+  font-weight: bolder;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-} */
