--- a/src/components/Restaurant/Menu/Item.css
+++ b/src/components/Restaurant/Menu/Item.css
@@ -4,6 +4,7 @@
 
 .item {
   margin: 10px;
+  border-left: 4px solid white;
   flex: 0 0 calc(50% - 30px);
   display: flex;
   min-height: 100px;
@@ -17,4 +18,9 @@
 
 .item-in-cart {
   border-left: 4px solid #5dccbf;
+}
+
+.item-number {
+  color: #aaa;
+  font-size: 14px;
 }
