--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,11 +2,17 @@
   --nav-bar-height: 45px;
 }
 
+/* .navbar-spacer {
+  height: var(--nav-bar-height);
+} used when navbar is fixed */
+
 .navbar {
+  /* position: fixed;  uncomment and add spacer to fix the navbar*/
+  width: 100%;
   background-color: white;
   height: var(--nav-bar-height);
   flex-direction: row;
-  border-bottom: 1px solid rgb(231, 231, 231);
+  border-bottom: 1px solid var(--border-grey);
   padding: 10px 0;
 }
 
