--- a/src/components/Restaurant/Headers/Headers.css
+++ b/src/components/Restaurant/Headers/Headers.css
@@ -1,3 +1,11 @@
 header {
-  padding: 20px 0;
+  padding: 30px 0;
+}
+
+header h1 {
+  padding: 30px 0;
+}
+
+.headers-infos {
+  padding-right: 20px;
 }
