--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body {
 }
 
 h3 {
+  padding-top: 5px;
   font-size: 16px;
   line-height: 22px;
   color: #2e3333;
@@ -31,7 +32,9 @@ h2 {
   line-height: 28px;
   color: #2e3333;
 }
-
+.overflow-hidden {
+  overflow: hidden;
+}
 .container {
   width: 1024px;
   padding: 0 15px;
