--- a/src/components/Restaurant/MenuInLineAndCart/MenuInLineAndCart.css
+++ b/src/components/Restaurant/MenuInLineAndCart/MenuInLineAndCart.css
@@ -87,3 +87,31 @@
 .side {
   width: 400px;
 }
+
+.cart-item {
+  /* -webkit-transition: 1s;
+  -moz-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
+  opacity: 0;
+  visibility: hidden; */
+  position: relative;
+  height: 100%;
+  /* background-color: peachpuff; */
+  overflow: hidden;
+  animation-name: slidein;
+  animation-duration: 0.3s;
+}
+
+@keyframes slidein {
+  from {
+    transform: scaleY(0);
+    /* top: -30px; */
+    /* height: 0; */
+  }
+  to {
+    transform: scaleY(1);
+    /* top: 0px; */
+    /* height: 100%; */
+  }
+}
