--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,10 @@ h2 {
   align-items: center;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .flex1 {
   flex: 1;
 }
@@ -76,4 +80,18 @@ h2 {
 
 .bold {
   font-weight: bolder;
+}
+
+.btn {
+  background-color: var(--deliveroo-blue);
+  padding: 15px;
+  text-align: center;
+  border-radius: 5px;
+  color: white;
+  font-weight: bolder;
+}
+
+.btn:hover {
+  opacity: 0.9;
+  cursor: pointer;
 }
