--- a/src/components/Restaurant/MenuInLineAndCart/MenuInLineAndCart.css
+++ b/src/components/Restaurant/MenuInLineAndCart/MenuInLineAndCart.css
@@ -29,15 +29,17 @@
 }
 
 .cart {
-  position: absolute;
-  right: 15px;
-  top: -1px;
   width: 400px;
-  /* border: 1px solid rgb(88, 88, 88); */
   box-shadow: 0px 8px 12px #aaa;
   border-radius: 5px;
   background-color: white;
   overflow: hidden;
+}
+
+.cart-fixed {
+  position: absolute;
+  right: 15px;
+  top: -1px;
 }
 
 .cart-content {
