--- a/src/components/Shipping/Shipping.css
+++ b/src/components/Shipping/Shipping.css
@@ -1,14 +1,29 @@
-.right-side {
-  width: 400px;
-  background-color: beige;
+.shipping {
+  padding-top: 20px;
 }
+
 .shipping-form {
+  border-radius: 5px;
   padding: 20px;
+  margin-right: 10px;
   background-color: white;
+  flex: 1;
+  box-shadow: 0px 8px 12px #aaa;
 }
 
 .shipping-form p {
   text-align: center;
+  padding: 15px 0;
+}
+.shipping-form label {
+  font-weight: bolder;
+  display: block;
+  padding-bottom: 5px;
+}
+
+.shipping-form input {
+  line-height: 25px;
+  border-radius: 5px;
 }
 
 .input-block {
@@ -19,4 +34,14 @@
 .input-block input,
 .input-block label {
   width: 100%;
+}
+
+.sharped {
+  position: absolute;
+  z-index: -1;
+  top: -100px;
+  height: 400px;
+  width: 100%;
+  background-color: #2b6b67;
+  transform: skewY(-6deg);
 }
